maquetacion de la admin

--- a/administrator/index.html
+++ b/administrator/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>Administrator</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<section>
+<section class="login">
 	<h4>To admin de data</h4>
 			<form method="post" action="dll/validar.php">
 				<div class="contenedor-inputs">
@@ -16,3 +17,4 @@
 </section>
 </body>
 </html>
+<!--- https://www.youtube.com/watch?v=w-H2fqxPvrs -->
