cambios de la adminsitracion

--- a/administrator/index.html
+++ b/administrator/index.html
@@ -6,14 +6,16 @@
 </head>
 <body>
 <section class="login">
+	<section class="login-box">
 	<h4>To admin de data</h4>
-			<form method="post" action="dll/validar.php">
-				<div class="contenedor-inputs">
-					<input type="text" name="username" placeholder="Username">
-					<input type="password" name="userpass" placeholder="Password">
-				</div>
-				<input type="submit" class="btn-submit" value="Login">
-			</form>
+				<form method="post" action="../dll/validar.php">
+					<div class="contenedor-inputs">
+						<input type="text" name="username" placeholder="Username">
+						<input type="password" name="userpass" placeholder="Password">
+					</div>
+					<input type="submit" class="btn-submit" value="Login">
+				</form>
+	</section>
 </section>
 </body>
 </html>
